<resources>
    <string name="app_name">Alpha天气</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="menu_air_map">空气质量图</string>
    <string name="menu_ranking">空气排行榜</string>
    <string name="menu_city_manage">城市管理</string>
    <string name="menu_about">关于应用</string>
    <string name="action_settings">设置</string>
    <string name="ranking_top_ten">空气质量Top10</string>
    <string name="about_call_us">联系开发者</string>
    <string name="about_mail">yanyunlong2010@163.com</string>
    <string name="about_version">应用版本</string>
    <string name="about_us">About us</string>
    <string name="select_city">选择城市</string>
    <string name="aqi">AQI:</string>
    <string name="aqitv">AQI</string>
    <string name="tmp_max">最高温度:</string>
    <string name="ssd">℃</string>
    <string name="tmp_min">最低温度:</string>
    <string name="tmp">实时温度:</string>
    <string name="now_weather">现在天气:</string>
    <string name="pmdw">μg/m3</string>
    <string name="codw">mg/m3</string>
    <string name="sszs">舒适指数:</string>
    <string name="cyzs">穿衣指数:</string>
    <string name="gmzs">感冒指数:</string>
    <string name="cxzs">出行指数:</string>
    <string name="wmwh">温馨提示 : 雾霾中细小粉粒可直接通过呼吸系统进入肺部，对人体呼吸系统危害巨大，造成呼吸道疾病、脑血管疾病、鼻腔炎症等病种。雾霾天气时，气压降低、空气中可吸入颗粒物骤增、空气流动性差，有害细菌和病毒向周围扩散的速度变慢，导致空气中病毒浓度增高，疾病传播的风险很高。请注意佩戴防雾霾口罩，保护身体健康。</string>
    <string name="fore_3">未来3天天气预报</string>
</resources>
