<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_air_map"
            android:icon="@drawable/ic_menu_map"
            android:title="@string/menu_air_map" />
        <item
            android:id="@+id/nav_phb"
            android:icon="@drawable/ic_menu_ranking"
            android:title="@string/menu_ranking" />
        <item
            android:id="@+id/nav_city_manage"
            android:icon="@drawable/ic_menu_city"
            android:title="@string/menu_city_manage" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_menu_about"
            android:title="@string/menu_about" />
    </group>

</menu>
